// openai_service.proto
syntax = "proto3";

package openai;

service OpenAIService {
  rpc AnalyzeCode(AnalyzeCodeRequest) returns (AnalyzeCodeResponse) {}
}

message AnalyzeCodeRequest {
  string code = 1;
}

message AnalyzeCodeResponse {
  string vulnerabilities = 1;
}